--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,10 @@ environment:
 dependencies:
   angular: ^5.0.0
   angular_components: ^0.9.0
+  stagexl: ^1.4.0+2
+  stagexl_bitmapfont: ^0.5.0
+  
+   
 
 dev_dependencies:
   angular_test: ^2.0.0
