--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   angular: ^5.0.0
   angular_components: ^0.9.0
   stagexl: ^1.4.0+2
-  stagexl_bitmapfont: ^0.5.0
+  angular_router: ^1.0.1
   
    
 
