--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
   angular: ^5.0.0
   angular_components: ^0.9.0
   stagexl: ^1.4.0+2
-  angular_router: ^1.0.1
+  angular_router: ^2.0.0-alpha+16
+
   
    
 
