--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   angular_components: ^0.9.0
   stagexl: ^1.4.0+2
   angular_router: ^2.0.0-alpha+16
-
+  angular_forms: ^2.0.0
   
    
 
